--- a/MicroSevicioDetalleKardex/pom.xml
+++ b/MicroSevicioDetalleKardex/pom.xml
@@ -1,27 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>3.0.7</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ec.diana</groupId>
-	<artifactId>MicroSevicioProducto</artifactId>
+	<artifactId>MicroSevicioDetalleKardex</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MicroSevicioProducto</name>
-	<description>Producto</description>
+	<name>MicroSevicioDetalleKardex</name>
+	<description>DetalleKardex</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -30,11 +24,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-tomcat</artifactId>
-		<scope>provided</scope>
-	</dependency>
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -45,8 +35,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		
 		<!-- USAR SWAGGER PARA DOCUMENTAR API -->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -72,7 +60,7 @@
 	</dependencies>
 
 	<build>
-	<finalName>producto8585</finalName>
+	<finalName>detallekatrdex8587</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
